# py_transcriber

./: README.md  pyproject.toml
py_transcriber/: Transcriber.py
workflows/: publish-to-test-pypi.yaml
